--- a/app/src/main/res/layout/todo_alarm_list.xml
+++ b/app/src/main/res/layout/todo_alarm_list.xml
@@ -37,11 +37,9 @@
             android:layout_width="@dimen/_50sdp"
             android:id="@+id/ivImg"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="@dimen/_150sdp"
-            app:layout_constraintStart_toEndOf="@+id/tvNote"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_height="@dimen/_50sdp"/>
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_height="@dimen/_50sdp"
+            tools:ignore="MissingConstraints" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
