--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,17 +52,17 @@
                     android:padding="8dp"
                     app:srcCompat="@drawable/photo" />
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/img_delete"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginEnd="12dp"-->
-<!--                    android:layout_toLeftOf="@+id/img_photo"-->
-<!--                    android:padding="8dp"-->
-<!--                    app:srcCompat="@drawable/delete" />-->
-
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
         <TimePicker
             android:id="@+id/timePicker"
@@ -70,8 +70,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/et_title"
@@ -103,19 +103,13 @@
             app:layout_constraintStart_toStartOf="@+id/et_title"
             app:layout_constraintTop_toBottomOf="@+id/et_title" />
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:foregroundGravity="bottom"
-            app:layout_constraintTop_toBottomOf="@+id/et_note"
-            android:layout_height="0dp">
-
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="match_parent"
             android:id="@+id/shapeImg"
+            app:layout_constraintTop_toBottomOf="@+id/et_note"
             android:layout_height="0dp"/>
 
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
